--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_swiper: ^1.1.6
   flutter_screenutil: ^2.1.0
+  dio: ^3.0.9
 
 dev_dependencies:
   flutter_test:
